# circuit-demo

./: .gitignore  1_2_yosys.v  CMakeLists.txt  PLAN.md  README.md  benchmark_all.sh  circuitgraph.h  circuitgraph_ogdf.h  complex.v  deep_hierarchy.v  filter.net  generate_high_fanout.py  layout_script.js  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_ogdf.cpp  mainwindow_ogdf.h  netlistparser.h  package-lock.json  package.json  rc_filter.net  reproduce_elk.json  run.sh  run_regression.sh  run_repro.js  test.net  test_1_2_yosys.cpp  test_circuit.v  test_compare_elk.cpp  test_metrics.cpp  test_metrics_elkjs.cpp  test_parser.cpp  test_placement_only.js  test_regression.cpp  test_simple_check.cpp
regression_baseline/: 1_2_yosys.snap  aes_cipher_top.snap  complex.snap  deep_hierarchy.snap  eqne.snap  ge2.snap  onehot16.snap  test_circuit.snap  timescale.snap
src/elk/: elk.hpp  elk_circuit_adapter.hpp  elk_circuit_layout.cpp  elk_circuit_layout.hpp  elk_edge.hpp  elk_graph.cpp  elk_graph.hpp  elk_layered.cpp  elk_layered.hpp  elk_lgraph.hpp  elk_node.hpp  elk_port.hpp  elk_shape.hpp  elk_types.hpp
